--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
 .e1_4 {
     background-color: rgba(44.000001177191734, 140.00000685453415, 83.00000265240669, 1);
     width: 75px;
-    height: 488px;
+    height: 800px;
     position: absolute;
     left: 1055px;
     top: 443px;
@@ -67,7 +67,7 @@ body {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     background-color: rgba(255, 255, 255, 1);
     width: 218px;
-    height: 241px;
+    height: 250px;
     position: absolute;
     left: 69px;
     top: 76px;
@@ -153,4 +153,13 @@ body {
     position: absolute;
     left: 500px;
     top: 683px;
+}
+#result{
+    position: absolute;
+    top: 70vh;
+    left: 140vh;
+}
+#result, p{
+    color:red;
+    font-size: 40px;
 }
